# config

./: .Xdefaults  .aliasrc  .bashrc  .envrc  .gitignore  .i3config  .i3pystatus.conf  .oh-my-zshrc  .termite.conf  .vimrc  .xinitrc  .xsession  .zshrc  archconfigsetup.sh  archpkginstall.sh  archsetup.sh  clonesetup.sh  configsetup.sh  create_symlink.sh  customrc  install_neovim.sh  install_nvim.sh  install_tools.py  mise_tools  requirements-graphic.txt  requirements.txt  setup.sh
clone/: setup.sh
docker/: .customrc  Dockerfile  setup_nvim.py
install_scripts/: install_neovim.sh  install_nerdfonts.sh
niri-tools/: Cargo.toml
niri-tools/src/: main.rs
node/: requirements.txt
python/: requirements.local.txt  requirements.system.txt
rootconf/: lightdm-gtk-greeter.conf  lightdm-mini-greeter.conf  lightdm.conf  reflector.conf  setup.sh
shell_plugins/asdf/: plugin.sh
shell_plugins/fnm/: fnm.plugin.zsh  plugin.sh
shell_plugins/n/: plugin.sh
shell_plugins/pyenv/: plugin.sh
tools/: fzf  get_url.py  install_tools.py  install_tools.sh  nvim  ripgrep
userconf/: .Rprofile  .Xdefaults  .alacritty.toml  .alacritty.yml  .aliasrc  .bashrc  .cmus  .coc-settings.json  .config.rasi  .docker.alias  .envrc  .git.alias  .gitconfig  .gtkrc-2.0  .gtkrc-3.0  .i3config  .i3pystatus.conf  .inputrc  .ipython_config.py  .kubectl.alias  .mimeapps.list  .oh-my-zshrc  .picom.conf  .profile  .pylintrc  .rc.conf  .shenvrc  .termite.conf  .tmux.conf  .toprc  .vimrc  .vimrc.minimal  .wezterm.lua  .xinitrc  .xprofile  .xsession  .zathurarc  .zshrc  .zshrc.min  setup.sh
userconf/.config/: mimeapps.list
userconf/.config/awesome/: .luarc.json  autofocus.lua  colors.lua  dropdown.lua  events.lua  functions.lua  notify.lua  rc.lua  theme.lua
userconf/.config/awesome/binding/: clientbuttons.lua  clientkeys.lua  globalbuttons.lua  globalkeys.lua
userconf/.config/awesome/deco/: statusbar.lua  titlebar.lua
userconf/.config/awesome/main/: autostart.lua  errors.lua  layouts.lua  menu.lua  rules.lua  signals.lua  vars.lua
userconf/.config/awesome/util/: bindkey.lua  bytes.lua  color.lua  functional.lua  interpolate.lua
userconf/.config/awesome/widget/: _lain_pulse.lua  battery.lua  mem.lua  net.lua  stopwatch.lua  temp.lua  volume.lua
userconf/.config/bpytop/: bpytop.conf
userconf/.config/btop/: btop.conf
userconf/.config/cmus/: rc
userconf/.config/dunst/: dunstrc
userconf/.config/ghostty/: config
userconf/.config/i3/: config  i3pystatus.conf
userconf/.config/mpv/: input.conf  m.conf  mpv.conf
userconf/.config/niri/: config.kdl
userconf/.config/nvim/: .luarc.json  code_runner.json  init.lua  init.lua.tmp
userconf/.config/nvim/colors/: monokai.lua
userconf/.config/nvim/custom_plugins/monokai-rainbow/colors/: monokai-rainbow.lua
userconf/.config/nvim/lua/: color.lua  config.lua  custom.lua  mappings.lua  options.lua  plugins.lua  utils.lua
userconf/.config/nvim/lua/myconfig/: color.lua  config.lua  custom.lua  mappings.lua  options.lua  plugins.lua  utils.lua
userconf/.config/nvim/lua/myconfig/plugins/: cmp.lua  coc.lua  code_runner.lua  colorizer.lua  comment-nvim.lua  dap.lua  dial.lua  dressing.lua  fugitive.lua  hlargs.lua  hop.lua  iron.lua  lsp.lua  lualine.lua  luasnip.lua  markdown-preview.lua  neo-zoom.lua  null-ls.lua  nvim-lint.lua  nvim-notify.lua  nvim-rooter.lua  nvim-tree.lua  packer.lua  project-nvim.lua  ripple.lua  telescope.lua  todo-comments.lua  toggleterm.lua  treesitter.lua  vimtex.lua  vista.lua
userconf/.config/nvim/lua/plugins/: asterisk.lua  bqf.lua  bufexplorer.lua  cmp.lua  coc.lua  code_runner.lua  colorizer.lua  comment-nvim.lua  dap.lua  dial.lua  eregex.lua  fugitive.lua  grepper.lua  hop.lua  iron.lua  kommentary.lua  lsp.lua  lualine.lua  markdown-preview.lua  null-ls.lua  nvim-lint.lua  nvim-tree.lua  packer.lua  project.lua  ripple.lua  telescope.lua  texmagic.lua  tmux.lua  todo-comments.lua  treesitter.lua  trouble.lua  vimtex.lua  vista.lua  zoomwintab.lua
userconf/.config/nvim/lua/regex/: functional.lua  init.lua  legacy-regex.lua  new-regex.lua
userconf/.config/nvim/lua/repl/: callbacks.lua  functional.lua  get.lua  init.lua  preprocess.lua  repls.lua  send.lua  utils.lua  window.lua
userconf/.config/nvim/lua/telescope/_extensions/: custom_buffers.lua  diffsplit.lua  macro_history.lua  yank_history.lua
userconf/.config/nvim/lua/user/: autocmds.lua  color.lua  config.lua  constants.lua  custom.lua  debug.lua  functional.lua  globals.lua  history.lua  mappings.lua  options.lua  plugins.lua  preview.lua  utils.lua
userconf/.config/nvim/lua/user/completions/: init.lua
userconf/.config/nvim/lua/user/custom/: big_files.lua  bracket.lua  bufmanager.lua  chmod.lua  cwd.lua  debug.lua  diagnostics.lua  file_stats.lua  fullscreen.lua  git.lua  jumplist.lua  latex-grammar.lua  macro.lua  marks.lua  quickfix-loclist.lua  reload.lua  ripgrep.lua  rooter.lua  spell.lua  (+9 more)
userconf/.config/nvim/queries/cjon/: highlights.scm  rainbow-delimiters.scm
userconf/.config/nvim/queries/jon/: highlights.scm
userconf/.config/nvim/snippets/: jon.json  package.json
userconf/.config/nvim/spell/: de.utf-8.add  de.utf-8.add.spl
userconf/.config/qtile/: config.py  pyproject.toml
userconf/.config/qtile/qtile_user/: bar.py  cmd.py  config.py  dimension.py  dropdown.py  keybindings.py  spawn.py  sticky.py  util.py
userconf/.config/ranger/: rc.conf
userconf/.config/rofi/: config.rasi
userconf/.config/waybar/: config.jsonc  style.css
userconf/.config/zathura/: zathurarc
userconf/.i3/: config  i3pystatus.conf
userconf/.ipython/profile_default/: ipython_config.py
userconf/.jupyter/: jupyter_console_config.py  jupyter_notebook_config.py  migrated
userconf/.jupyter/nbconfig/: notebook.json
userconf/.vim/: coc-settings.json
(+75 files in other folders)
