[project]
name = "qtile-config"
dynamic = ["version"]
description = ""
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
keywords = []
authors = [{ name = "Dominik Schwabe", email = "schwabedominik@gmail.com" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"

[tool.ruff]
target-version = "py38"
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "TRY003",
  "COM812",
  "ISC001",
  "D",
  "ANN",
  "INP",
  "G",
  "FA",
  "PGH",
  "RET",
  "PYI",
  "PLW",
  "EM101",
  "EM102",
  "S104",
  "A003",
  "FBT003",
  "S105",
  "S106",
  "S107",
  "C901",
  "PLR0911",
  "PLR0912",
  "PLR0913",
  "PLR0915",
]
unfixable = []

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
implicit_reexport = true
check_untyped_defs = true
disallow_any_explicit = true
ignore_missing_imports = true
no_implicit_optional = true
no_implicit_reexport = true
pretty = true
show_column_numbers = true
show_error_codes = true
strict_equality = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
